AC_INIT
AC_CONFIG_SRCDIR([src/moneybook.cpp])
AC_HEADER_STDBOOL
AM_INIT_AUTOMAKE(moneybook,0.1,20050419)
AM_PATH_CPPUNIT(1.9.6)

AC_ARG_ENABLE(
	[debug],
	[AS_HELP_STRING(--enable-debug,build with debugging information (default NO)
	)],
	[test "$enableval" = "yes" && VARIANT=debug]
)

AC_CONFIG_HEADERS(src/config.h)

LIBS="$LIBS"

AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_LIBTOOL
AC_LANG([C++])
AC_DEFUN(AC_PROG_DOXYGEN,[
	test -z "$DOXYGEN" && AC_CHECK_PROGS(DOXYGEN, doxygen)
	test -z "$DOXYGEN" && AC_MSG_ERROR([doxygen not found in \$PATH])
])
AC_PROG_DOXYGEN
AC_PROG_INSTALL
AC_PROG_MAKE_SET

CFLAGS="$CFLAGS"
CPPFLAGS="$CPPFLAGS"
CXXFLAGS="$CXXFLAGS"

AC_CONFIG_FILES([Makefile \
	src/Makefile \
	src/engine/Makefile \
	src/engine/tests/Makefile \
	src/interface/Makefile \
])
AC_OUTPUT
